--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>David Bouhaben ePortofolio</title>
   </head>
   <body>
+    <div id="loading"></div>
     <!-- <header class="header">
       <h1 class="header__logo"></h1>
       <nav class="nav">
