--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>David Bouhaben ePortofolio</title>
   </head>
   <body>
-    <div id="loading"></div>
+    <div class="loading loading--full-hight"></div>
     <!-- <header class="header">
       <h1 class="header__logo"></h1>
       <nav class="nav">
