--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <title>David Bouhaben ePortofolio</title>
   </head>
   <body>
-    <div class="loading loading--full-hight"></div>
+    <div class="loading--circle loading--full-hight">
+      <div class="loading--box loading--full-hight"></div>
+    </div>
     <!-- <header class="header">
       <h1 class="header__logo"></h1>
       <nav class="nav">
