percentage center spinner

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   </head>
   <body>
     <div class="loading--circle loading--full-hight">
-      <div class="loading--box loading--full-hight"></div>
+      <div class="loading--box loading--full-hight">
+        <span class="percentage">0%</span>
+      </div>
     </div>
     <!-- <header class="header">
       <h1 class="header__logo"></h1>
