--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/public/css/style.css" />
+
     <title>David Bouhaben ePortofolio</title>
   </head>
   <body>
@@ -110,5 +111,6 @@
         </section> -->
     <!-- </div> -->
     <!-- </main> -->
+    <script src="./public/JS/header.js"></script>
   </body>
 </html>
