js loading start

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/public/css/style.css" />
-
+    <script src="./public/JS/loading.js"></script>
     <title>David Bouhaben ePortofolio</title>
   </head>
   <body>
     <div class="loading--circle loading--full-hight">
       <div class="loading--box loading--full-hight">
-        <span class="percentage">0%</span>
+        <span class="percentage"></span>
       </div>
     </div>
     <!-- <header class="header">
@@ -111,6 +111,5 @@
         </section> -->
     <!-- </div> -->
     <!-- </main> -->
-    <script src="./public/JS/header.js"></script>
   </body>
 </html>
