js loading spinner dosen't work

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="loading--circle loading--full-hight">
       <div class="loading--box loading--full-hight">
-        <span class="percentage"></span>
+        <!-- <span class="percentage">%</span> -->
       </div>
     </div>
     <!-- <header class="header">
