loading spinner then wrapper page

--- a/index.html
+++ b/index.html
@@ -13,29 +13,29 @@
   </head>
   <body>
     <div class="loading--circle loading--full-hight">
-      <div class="loading--box loading--full-hight">
-      </div>
+      <div class="loading--box loading--full-hight"></div>
     </div>
-    <!-- <header class="header">
-      <h1 class="header__logo"></h1>
-      <nav class="nav">
-        <ul>
-          <li class="nav__link nav__link--active"></li>
-          <li class="nav__link"><a href="/about.html"></a></li>
-          <li class="nav__link"><a href="/contact.html"></a></li>
-        </ul>
-      </nav>
-    </header> -->
+    <div class="wrapper">
+      <header class="header">
+        <h1 class="header__logo"></h1>
+        <nav class="nav">
+          <ul>
+            <li class="nav__link nav__link--active"></li>
+            <li class="nav__link"><a href="/about.html"></a></li>
+            <li class="nav__link"><a href="/contact.html"></a></li>
+          </ul>
+        </nav>
+      </header>
 
-    <!-- <section class="quote"> -->
-    <!-- "We are the <strong>music makers,</strong>
+      <!-- <section class="quote"> -->
+      <!-- "We are the <strong>music makers,</strong>
         <br/>
         and we are the <strong>dreamers of dreams."</strong> -->
-    <!-- </section> -->
+      <!-- </section> -->
 
-    <!-- <main class="container"> -->
-    <!-- <div class="proj-grid"> -->
-    <!-- <section class="proj-prev" onclick="location.href='/project.html'">
+      <!-- <main class="container"> -->
+      <!-- <div class="proj-grid"> -->
+      <!-- <section class="proj-prev" onclick="location.href='/project.html'">
           <div class="proj-prev__image">
             <img
               src="/public/img/photography_1280w.jpg"
@@ -107,8 +107,9 @@
           <h1 class="proj-prev__heading">Project Title</h1>
           <p class="proj-prev__byline">project keywords would go here</p>
         </section> -->
-    <!-- </div> -->
-    <!-- </main> -->
+      <!-- </div> -->
+      <!-- </main> -->
+    </div>
     <script src="./public/JS/loading.js"></script>
   </body>
 </html>
