--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
     </div>
     <div class="wrapper">
       <header class="header">
-        <h1 class="header__logo"></h1>
-        <nav class="nav">
-          <ul>
-            <li class="nav__link nav__link--active"></li>
-            <li class="nav__link"><a href="/about.html"></a></li>
-            <li class="nav__link"><a href="/contact.html"></a></li>
-          </ul>
-        </nav>
+        <div id="home" class="wellcome">
+          <h1 class="header__logo"></h1>
+          <nav class="nav">
+            <ul>
+              <li class="nav__link nav__link--active"></li>
+              <li class="nav__link"><a href="/about.html"></a></li>
+              <li class="nav__link"><a href="/contact.html"></a></li>
+            </ul>
+          </nav>
+        </div>
       </header>
 
       <!-- <section class="quote"> -->
