header better in line

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     <div class="wrapper">
       <div class="wrapper-logo">
         <header class="header">
-          <div id="home" class="wellcome">
-            <h1 class="header__logo">1</h1>
+          <div id="home" class="wellcome logo-container">
+            <h1 class="header__logo"><a href="/index.html"><img src="./public/image/Logo-david-bouhaben.png" alt="Logo David Bouhaben"></a></h1>
+            <div class="container-hamburger">
             <button class="hamburger-toggle">
               <span class="bar-top"></span>
               <span class="bar-mid"></span>
@@ -32,6 +33,7 @@
                 <li class="nav__link"><a href="/contact.html">Contact</a></li>
               </ul>
             </nav>
+            </div>
           </div>
         </header>
         </div>
