--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <title>David Bouhaben ePortofolio</title>
   </head>
   <body>
+    <div class="menu-open-mobile">
+
+    </div>
     <div class="loading--circle loading--full-hight">
       <div class="loading--box loading--full-hight"></div>
     </div>
