--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     <title>David Bouhaben ePortofolio</title>
   </head>
   <body>
-    <div class="menu-open-mobile">
-
-    </div>
+    <div id="navId" class=""></div>
     <div class="loading--circle loading--full-hight">
       <div class="loading--box loading--full-hight"></div>
     </div>
@@ -127,5 +125,6 @@
     </div>
     <script src="./public/JS/loading.js"></script>
     <script src="./public/JS/hamburger.js"></script>
+    <script src="./public/JS/nav.js"></script>
   </body>
 </html>
