--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <title>David Bouhaben ePortofolio</title>
   </head>
   <body>
-    <div id="navId" class=""></div>
+    <div id="navId" class="nav-close"></div>
     <div class="loading--circle loading--full-hight">
       <div class="loading--box loading--full-hight"></div>
     </div>
-    <div class="wrapper">
+    <div class="wrapper" >
       <div class="wrapper-logo">
         <header class="header">
           <div id="home" class="wellcome logo-container">
