nav close et open fonctionne

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>David Bouhaben ePortofolio</title>
   </head>
   <body>
-    <div id="navId" class="nav-close"></div>
+    <div id="navId" class=""></div>
     <div class="loading--circle loading--full-hight">
       <div class="loading--box loading--full-hight"></div>
     </div>
