--- a/index.html
+++ b/index.html
@@ -9,10 +9,25 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/public/css/style.css" />
-    <title>David Bouhaben ePortofolio</title>
+    <title>David Bouhaben ePortfolio</title>
   </head>
   <body>
-    <div id="navId" class=""></div>
+    <div id="navId" class="">
+    <nav class="nav">
+      <ul>
+        <li class="nav__link nav__link--active"><a href="/about.html">Accueil</a></li>
+        <li class="nav__link"><a href="/Profil.html">Profil</a></li>
+        <li class="nav__link"><a href="/Portfolio.html">Portfolio</a></li>
+        <li class="nav__link"><a href="/CV.html">CV</a></li>
+        <li class="nav__link"><a href="/Contact.html">Contact</a></li>
+        <li class="nav__link"><a href="/Activité.html">Activité Récente</a></li>
+        <!-- Langue, Anglais, Francais, Indonésien -->
+        <li class="nav__link"><a href="/Profil.html">Langue</a></li>
+        <!-- ----------------------------------------------------- -->
+        <li class="nav__link"><a href="/Portfolio.html">Darkmode</a></li>
+      </ul>
+    </nav>
+  </div>
     <div class="loading--circle loading--full-hight">
       <div class="loading--box loading--full-hight"></div>
     </div>
@@ -27,13 +42,6 @@
               <span class="bar-mid"></span>
               <span class="bar-bot"></span>
             </button>
-            <nav class="nav">
-              <ul>
-                <li class="nav__link nav__link--active">Home</li>
-                <li class="nav__link"><a href="/about.html">About</a></li>
-                <li class="nav__link"><a href="/contact.html">Contact</a></li>
-              </ul>
-            </nav>
             </div>
           </div>
         </header>
