nav organisation good

--- a/index.html
+++ b/index.html
@@ -16,15 +16,22 @@
     <nav class="nav">
       <ul>
         <li class="nav__link nav__link--active"><a href="/about.html">Accueil</a></li>
-        <li class="nav__link"><a href="/Profil.html">Profil</a></li>
-        <li class="nav__link"><a href="/Portfolio.html">Portfolio</a></li>
-        <li class="nav__link"><a href="/CV.html">CV</a></li>
-        <li class="nav__link"><a href="/Contact.html">Contact</a></li>
-        <li class="nav__link"><a href="/Activité.html">Activité Récente</a></li>
+        <li class="nav__link"><a href="#profil">Profil</a></li>
+        <li class="nav__link"><a href="#portfolio">Portfolio</a></li>
+        <li class="nav__link"><a href="#CV">CV</a></li>
+        <li class="nav__link"><a href="#Contact">Contact</a></li>
+        <li class="nav__link"><a href="#Activité">Activité Récente</a></li>
         <!-- Langue, Anglais, Francais, Indonésien -->
-        <li class="nav__link"><a href="/Profil.html">Langue</a></li>
+        <div class="langue">
+          <li class="nav__link"><a href="#langue">Langue</a></li>
+          <div class="drapeau">
+            <span>France</span>
+            <span>Anglais</span>
+            <span>Indonésie</span>
+          </div>
+        </div>
         <!-- ----------------------------------------------------- -->
-        <li class="nav__link"><a href="/Portfolio.html">Darkmode</a></li>
+        <li class="nav__link"><a href="#Darkmode">Darkmode</a></li>
       </ul>
     </nav>
   </div>
