ul animation open work

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div id="navId" class="">
-    <nav class="nav">
+    <nav id="nav" class="nav">
       <ul>
         <li class="nav__link nav__link--active"><a href="/about.html">Accueil</a></li>
         <li class="nav__link"><a href="#profil">Profil</a></li>
