design nav better

--- a/index.html
+++ b/index.html
@@ -15,23 +15,21 @@
     <div id="navId" class="">
     <nav id="nav" class="nav">
       <ul>
-        <li class="nav__link nav__link--active"><a href="/about.html">Accueil</a></li>
-        <li class="nav__link"><a href="#profil">Profil</a></li>
-        <li class="nav__link"><a href="#portfolio">Portfolio</a></li>
-        <li class="nav__link"><a href="#CV">CV</a></li>
-        <li class="nav__link"><a href="#Contact">Contact</a></li>
-        <li class="nav__link"><a href="#Activité">Activité Récente</a></li>
+        <li><a href="/about.html" class="nav__link nav__link--active">Accueil</a></li>
+        <li><a href="#profil" class="nav__link">Profil</a></li>
+        <li><a href="#portfolio" class="nav__link">Portfolio</a></li>
+        <li><a href="#CV" class="nav__link">CV</a></li>
+        <li><a href="#Contact" class="nav__link">Contact</a></li>
+        <li><a href="#Activité" class="nav__link">Activité Récente</a></li>
         <!-- Langue, Anglais, Francais, Indonésien -->
-        <div class="langue">
-          <li class="nav__link"><a href="#langue">Langue</a></li>
-          <div class="drapeau">
+          <li><a href="#langue" class="nav__link">Langue</a></li>
+          <div class="langue">
             <span>France</span>
             <span>Anglais</span>
             <span>Indonésie</span>
           </div>
-        </div>
         <!-- ----------------------------------------------------- -->
-        <li class="nav__link"><a href="#Darkmode">Darkmode</a></li>
+        <li><a href="#Darkmode" class="nav__link">Darkmode</a></li>
       </ul>
     </nav>
   </div>
