--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
         <li><a href="#Contact" class="nav__link">Contact</a></li>
         <li><a href="#Activité" class="nav__link">Activité Récente</a></li>
         <!-- Langue, Anglais, Francais, Indonésien -->
-          <li><a href="#langue" class="nav__link">Langue</a></li>
-          <div class="langue">
-            <span>France</span>
-            <span>Anglais</span>
-            <span>Indonésie</span>
-          </div>
+        <li><a href="#langue" class="nav__link"><img src="./public/image/Drapeau/France.png" alt="France"> <i class="fas fa-moon"></i> Français</a></li>
+        <!-- <div class="langue">
+          <span>France</span>
+          <span>Anglais</span>
+          <span>Indonésie</span>
+        </div> 
+      a faire avec JS-->
         <!-- ----------------------------------------------------- -->
-        <li><a href="#Darkmode" class="nav__link">Darkmode</a></li>
+        <li><a href="#Darkmode" class="nav__link"><i class="fas fa-moon"></i>Mode sombre</a></li>
       </ul>
     </nav>
   </div>
@@ -52,7 +53,6 @@
         </header>
         </div>
       </div>
-
       <!-- <section class="quote"> -->
       <!-- "We are the <strong>music makers,</strong>
         <br/>
@@ -136,8 +136,11 @@
       <!-- </div> -->
       <!-- </main> -->
     </div>
-    <script src="./public/JS/loading.js"></script>
-    <script src="./public/JS/hamburger.js"></script>
-    <script src="./public/JS/nav.js"></script>
+    <script defer src="./public/JS/loading.js"></script>
+    <script defer src="./public/JS/hamburger.js"></script>
+    <script defer src="./public/JS/nav.js"></script>
+    <script defer src="/your-path-to-fontawesome/js/brands.js"></script>
+    <script defer src="/your-path-to-fontawesome/js/solid.js"></script>
+    <script defer src="/your-path-to-fontawesome/js/fontawesome.js"></script>
   </body>
 </html>
