font awesome remove

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li><a href="#Contact" class="nav__link">Contact</a></li>
         <li><a href="#Activité" class="nav__link">Activité Récente</a></li>
         <!-- Langue, Anglais, Francais, Indonésien -->
-        <li><a href="#langue" class="nav__link"><img src="./public/image/Drapeau/France.png" alt="France"> <i class="fas fa-moon"></i> Français</a></li>
+        <li><a href="#langue" class="nav__link"><img src="./public/image/Drapeau/France.png" alt="France">  Français</a></li>
         <!-- <div class="langue">
           <span>France</span>
           <span>Anglais</span>
@@ -30,7 +30,7 @@
         </div> 
       a faire avec JS-->
         <!-- ----------------------------------------------------- -->
-        <li><a href="#Darkmode" class="nav__link"><i class="fas fa-moon"></i>Mode sombre</a></li>
+        <li><a href="#Darkmode" class="nav__link"><i class="fas fa-adjust"></i>Mode sombre</a></li>
       </ul>
     </nav>
   </div>
