font awesome better

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div> 
       a faire avec JS-->
         <!-- ----------------------------------------------------- -->
-        <li><a href="#Darkmode" class="nav__link"><i class="fas fa-adjust"></i>Mode sombre</a></li>
+        <li><a href="#Darkmode" class="nav__link"><i class="fas fa-user"></i>Mode sombre</a></li>
       </ul>
     </nav>
   </div>
