font awesome works and better place

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
       href="https://fonts.googleapis.com/css?family=Roboto:100,900i"
       rel="stylesheet"
     />
+    <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    rel="stylesheet"
+    />
     <link rel="stylesheet" href="/public/css/style.css" />
+    <link rel="stylesheet" href="/public/css/style.css.map"/>
     <title>David Bouhaben ePortfolio</title>
   </head>
   <body>
@@ -22,7 +27,7 @@
         <li><a href="#Contact" class="nav__link">Contact</a></li>
         <li><a href="#Activité" class="nav__link">Activité Récente</a></li>
         <!-- Langue, Anglais, Francais, Indonésien -->
-        <li><a href="#langue" class="nav__link"><img src="./public/image/Drapeau/France.png" alt="France">  Français</a></li>
+        <li><a href="#langue" class="nav__link"><img src="./public/image/Drapeau/France.png" alt="France">Français</a></li>
         <!-- <div class="langue">
           <span>France</span>
           <span>Anglais</span>
@@ -30,7 +35,7 @@
         </div> 
       a faire avec JS-->
         <!-- ----------------------------------------------------- -->
-        <li><a href="#Darkmode" class="nav__link"><i class="fas fa-user"></i>Mode sombre</a></li>
+        <li><a href="#Darkmode" class="nav__link"><i class="fa-solid fa-circle-half-stroke"></i>Mode sombre</a></li>
       </ul>
     </nav>
   </div>
@@ -53,9 +58,7 @@
         </header>
         </div>
       </div>
-
-      <!-- <section class="quote"> -->
-      <!-- "We are the <strong>music makers,</strong>
+     <!-- "We are the <strong>music makers,</strong>
         <br/>
         and we are the <strong>dreamers of dreams."</strong> -->
       <!-- </section> -->
