fontawesome scss works

--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
       href="https://fonts.googleapis.com/css?family=Roboto:100,900i"
       rel="stylesheet"
     />
-    <link
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    rel="stylesheet"
-    />
     <link rel="stylesheet" href="/public/css/style.css" />
     <link rel="stylesheet" href="/public/css/style.css.map"/>
     <title>David Bouhaben ePortfolio</title>
@@ -142,9 +138,8 @@
     </div>
     <script defer src="./public/JS/loading.js"></script>
     <script defer src="./public/JS/hamburger.js"></script>
-    <script defer src="./public/JS/nav.js"></script>
-    <script defer src="/your-path-to-fontawesome/js/brands.js"></script>
-    <script defer src="/your-path-to-fontawesome/js/solid.js"></script>
-    <script defer src="/your-path-to-fontawesome/js/fontawesome.js"></script>
+    <script defer src="./public/JS/nav.js"></script>    <script defer src="/your-path-to-fontawesome/js/all"></script>
+    <script defer src="./public/JS/font-awesome-JS/all.js"></script>
+    <script defer src="./public/JS/font-awesome-JS/all.min.js"></script>
   </body>
 </html>
