design nav better

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <div id="navId" class="">
     <nav id="nav" class="nav">
       <ul>
-        <li><a href="/about.html" class="nav__link nav__link--active">Accueil</a></li>
-        <li><a href="#profil" class="nav__link">Profil</a></li>
-        <li><a href="#portfolio" class="nav__link">Portfolio</a></li>
-        <li><a href="#CV" class="nav__link">CV</a></li>
-        <li><a href="#Contact" class="nav__link">Contact</a></li>
-        <li><a href="#Activité" class="nav__link">Activité Récente</a></li>
+        <li class="li"><a href="/about.html" class="nav__link nav__link--active">Accueil</a></li>
+        <li class="li"><a href="#profil" class="nav__link">Profil</a></li>
+        <li class="li"><a href="#portfolio" class="nav__link">Portfolio</a></li>
+        <li class="li"><a href="#CV" class="nav__link">CV</a></li>
+        <li class="li"><a href="#Contact" class="nav__link">Contact</a></li>
+        <li class="li"><a href="#Activité" class="nav__link">Activité Récente</a></li>
         <!-- Langue, Anglais, Francais, Indonésien -->
-        <li><a href="#langue" class="nav__link"><img src="./public/image/Drapeau/France.png" alt="France">Français</a></li>
+        <li class="li"><a href="#langue" class="nav__link"><img src="./public/image/Drapeau/France.png" alt="France">Version Française</a></li>
         <!-- <div class="langue">
           <span>France</span>
           <span>Anglais</span>
@@ -31,7 +31,9 @@
         </div> 
       a faire avec JS-->
         <!-- ----------------------------------------------------- -->
-        <li><a href="#Darkmode" class="nav__link"><i class="fa-solid fa-circle-half-stroke"></i>Mode sombre</a></li>
+        <div class="darkmode">
+          <li><a href="#Darkmode" class="nav__link"><i class="fa-solid fa-circle-half-stroke"></i>Mode sombre</a></li>
+        </div>
       </ul>
     </nav>
   </div>
