--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
       a faire avec JS-->
         <!-- ----------------------------------------------------- -->
         <div class="darkmode">
-          <li><a href="#Darkmode" class="nav__link"><i class="fa-solid fa-circle-half-stroke"></i>Mode sombre</a></li>
+          <span class="dark__police"><i class="fa-solid fa-circle-half-stroke"></i>Mode sombre</a></li></span>
+          <input type="checkbox" name="darkmode" class="toggle" id="darkmode">
+          <label for="darkmode" class="toggleBtn"></label>
         </div>
       </ul>
     </nav>
