--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/public/css/style.css.map"/>
     <title>David Bouhaben ePortfolio</title>
   </head>
-  <body>
+  <body class="" id="bodyId">
     <div id="navId" class="">
     <nav id="nav" class="nav">
       <ul>
@@ -145,5 +145,6 @@
     <script defer src="./public/JS/nav.js"></script>    <script defer src="/your-path-to-fontawesome/js/all"></script>
     <script defer src="./public/JS/font-awesome-JS/all.js"></script>
     <script defer src="./public/JS/font-awesome-JS/all.min.js"></script>
+    <script defer src="./public/JS/darkmode.js"></script>
   </body>
 </html>
