--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li class="li"><a href="#langue" class="nav__link"><img src="./public/image/Drapeau/France.png" alt="France">Version Française</a></li>
         <!-- ----------------------------------------------------- -->
         <div class="darkmode">
-          <span class="dark__police"><i class="fa-solid fa-circle-half-stroke"></i>Mode sombre</a></li></span>
+          <span id="darkmode-Text" class="dark__police"><i class="fa-solid fa-circle-half-stroke"></i>Mode claire</span>
           <input type="checkbox" name="darkmode" class="toggle" id="darkmode">
           <label for="darkmode" class="toggleBtn"></label>
         </div>
@@ -136,7 +136,7 @@
     </div>
     <script defer src="./public/JS/loading.js"></script>
     <script defer src="./public/JS/hamburger.js"></script>
-    <script defer src="./public/JS/nav.js"></script>    <script defer src="/your-path-to-fontawesome/js/all"></script>
+    <script defer src="./public/JS/nav.js"></script>
     <script defer src="./public/JS/font-awesome-JS/all.js"></script>
     <script defer src="./public/JS/font-awesome-JS/all.min.js"></script>
     <script defer src="./public/JS/darkmode.js"></script>
