light on off better

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li class="li"><a href="#langue" class="nav__link"><img src="./public/image/Drapeau/France.png" alt="France">Version Française</a></li>
         <!-- ----------------------------------------------------- -->
         <div class="darkmode">
-          <span id="darkmode-Text" class="dark__police"><i class="fa-solid fa-circle-half-stroke"></i>Mode claire</span>
+          <span id="darkmode-Text" class="dark__police"><i class="far fa-lightbulb claire"></i>Mode claire</span>
           <input type="checkbox" name="darkmode" class="toggle" id="darkmode">
           <label for="darkmode" class="toggleBtn"></label>
         </div>
