--- a/index.html
+++ b/index.html
@@ -1,64 +1,92 @@
-
-
 <!DOCTYPE html>
 <html lang="fr">
-   <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-      <link
-         href="https://fonts.googleapis.com/css?family=Roboto:100,900i"
-         rel="stylesheet"
-         />
-      <link rel="stylesheet" href="/public/css/style.css" />
-      <link rel="stylesheet" href="/public/css/style.css.map"/>
-      <title>David Bouhaben ePortfolio</title>
-   </head>
-   <body class="" id="bodyId">
-      <div id="navId" class="">
-         <nav id="nav" class="nav">
-            <ul>
-               <li class="li"><a href="/about.html" class="nav__link nav__link--active">Accueil</a></li>
-               <li class="li"><a href="#profil" class="nav__link">Profil</a></li>
-               <li class="li"><a href="#portfolio" class="nav__link">Portfolio</a></li>
-               <li class="li"><a href="#CV" class="nav__link">CV</a></li>
-               <li class="li"><a href="#Contact" class="nav__link">Contact</a></li>
-               <li class="li"><a href="#Activité" class="nav__link">Activité Récente</a></li>
-               <!-- Langue, Anglais, Francais, Indonésien -->
-               <li class="li"><a href="#langue" class="nav__link"><img src="./public/image/Drapeau/France.png" alt="France">Version Française</a></li>
-               <!-- ----------------------------------------------------- -->
-               <div class="darkmode">
-                  <span id="darkmode-Text" class="dark__police"><i class="far fa-lightbulb claire"></i>Mode claire</span>
-                  <input type="checkbox" name="darkmode" class="toggle" id="darkmode">
-                  <label for="darkmode" class="toggleBtn"></label>
-               </div>
-            </ul>
-         </nav>
-      </div>
-      <div class="loading--circle loading--full-hight">
-         <div class="loading--box loading--full-hight"></div>
-      </div>
-      <div class="wrapper" >
-         <header class="header">
-            <div id="home" class="wellcome logo-container">
-               <h1 class="header__logo"><a href="/index.html"><img src="./public/image/Logo-david-bouhaben.png" alt="Logo David Bouhaben"></a></h1>
-               <div class="container-hamburger">
-                  <button class="hamburger-toggle">
-                  <span class="bar-top"></span>
-                  <span class="bar-mid"></span>
-                  <span class="bar-bot"></span>
-                  </button>
-               </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:100,900i"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/public/css/style.css" />
+    <link rel="stylesheet" href="/public/css/style.css.map" />
+    <title>David Bouhaben ePortfolio</title>
+  </head>
+  <body class="" id="bodyId">
+    <div id="navId" class="">
+      <nav id="nav" class="nav">
+        <ul>
+          <li class="li">
+            <a href="/about.html" class="nav__link nav__link--active"
+              >Accueil</a
+            >
+          </li>
+          <li class="li"><a href="#profil" class="nav__link">Profil</a></li>
+          <li class="li">
+            <a href="#portfolio" class="nav__link">Portfolio</a>
+          </li>
+          <li class="li"><a href="#CV" class="nav__link">CV</a></li>
+          <li class="li"><a href="#Contact" class="nav__link">Contact</a></li>
+          <li class="li">
+            <a href="#Activité" class="nav__link">Activité Récente</a>
+          </li>
+          <!-- Langue, Anglais, Francais, Indonésien -->
+          <li class="li">
+            <a href="#langue" class="nav__link"
+              ><img
+                src="./public/image/Drapeau/France.png"
+                alt="France"
+              />Version Française</a
+            >
+          </li>
+          <!-- ----------------------------------------------------- -->
+          <div class="darkmode">
+            <span id="darkmode-Text" class="dark__police"
+              ><i class="far fa-lightbulb claire"></i>Mode claire</span
+            >
+            <input
+              type="checkbox"
+              name="darkmode"
+              class="toggle"
+              id="darkmode"
+            />
+            <label for="darkmode" class="toggleBtn"></label>
+          </div>
+        </ul>
+      </nav>
+    </div>
+    <div class="loading--circle loading--full-hight">
+      <div class="loading--box loading--full-hight"></div>
+    </div>
+    <div class="wrapper">
+      <div class="container-header">
+        <header id="header">
+          <div id="home" class="wellcome logo-container">
+            <h1 class="header__logo">
+              <a href="/index.html"
+                ><img
+                  src="./public/image/Logo-david-bouhaben.png"
+                  alt="Logo David Bouhaben"
+              /></a>
+            </h1>
+            <div class="container-hamburger">
+              <button class="hamburger-toggle">
+                <span class="bar-top"></span>
+                <span class="bar-mid"></span>
+                <span class="bar-bot"></span>
+              </button>
             </div>
-         </header>
+          </div>
+        </header>
       </div>
-      <!-- "We are the <strong>music makers,</strong>
+    </div>
+    <!-- "We are the <strong>music makers,</strong>
          <br/>
          and we are the <strong>dreamers of dreams."</strong> -->
-      <!-- </section> -->
-      <!-- <main class="container"> -->
-      <!-- <div class="proj-grid"> -->
-      <!-- <section class="proj-prev" onclick="location.href='/project.html'">
+    <!-- </section> -->
+    <!-- <main class="container"> -->
+    <!-- <div class="proj-grid"> -->
+    <!-- <section class="proj-prev" onclick="location.href='/project.html'">
          <div class="proj-prev__image">
            <img
              src="/public/img/photography_1280w.jpg"
@@ -130,15 +158,14 @@
          <h1 class="proj-prev__heading">Project Title</h1>
          <p class="proj-prev__byline">project keywords would go here</p>
          </section> -->
-      <!-- </div> -->
-      <!-- </main> -->
-      <!-- </div> -->
-      <script defer src="./public/JS/loading.js"></script>
-      <script defer src="./public/JS/hamburger.js"></script>
-      <script defer src="./public/JS/nav.js"></script>
-      <script defer src="./public/JS/font-awesome-JS/all.js"></script>
-      <script defer src="./public/JS/font-awesome-JS/all.min.js"></script>
-      <script defer src="./public/JS/darkmode.js"></script>
-   </body>
+    <!-- </div> -->
+    <!-- </main> -->
+    <!-- </div> -->
+    <script defer src="./public/JS/loading.js"></script>
+    <script defer src="./public/JS/hamburger.js"></script>
+    <script defer src="./public/JS/nav.js"></script>
+    <script defer src="./public/JS/font-awesome-JS/all.js"></script>
+    <script defer src="./public/JS/font-awesome-JS/all.min.js"></script>
+    <script defer src="./public/JS/darkmode.js"></script>
+  </body>
 </html>
-
