Bem header better

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/public/css/style.css.map" />
     <title>David Bouhaben ePortfolio</title>
   </head>
+  <!-- Ici, le nav -->
   <body class="" id="bodyId">
     <div id="navId" class="">
       <nav id="nav" class="nav">
@@ -39,7 +40,6 @@
               />Version Française</a
             >
           </li>
-          <!-- ----------------------------------------------------- -->
           <div class="darkmode">
             <span id="darkmode-Text" class="dark__police"
               ><i class="far fa-lightbulb claire"></i>Mode claire</span
@@ -58,11 +58,12 @@
     <div class="loading--circle loading--full-hight">
       <div class="loading--box loading--full-hight"></div>
     </div>
-    <div class="wrapper">
+    <!-- Ici, Header -->
+    <header id="site-header" class="wrapper">
       <div class="container-header">
-        <header id="header">
-          <div id="home" class="wellcome logo-container">
-            <h1 class="header__logo">
+        <div class="container-header__nav">
+          <div id="home" class="nav nav__logo">
+            <h1 class="nav__logo--modifier">
               <a href="/index.html"
                 ><img
                   src="./public/image/Logo-david-bouhaben.png"
@@ -77,9 +78,9 @@
               </button>
             </div>
           </div>
-        </header>
+        </div>
       </div>
-    </div>
+    </header>
     <!-- "We are the <strong>music makers,</strong>
          <br/>
          and we are the <strong>dreamers of dreams."</strong> -->
