--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
         <div class="container-header__info">
           <div class="container-header__nav">
             <div id="home" class="nav nav__logo">
-              <h1 class="nav__logo--modifier">
+              <span class="nav__logo--modifier">
                 <a href="/index.html"
                   ><img
                     src="./public/image/Logo-david-bouhaben.png"
                     alt="Logo David Bouhaben"
                 /></a>
-              </h1>
+              </span>
               <div class="hamburger">
                 <button class="hamburger-toggle">
                   <span class="bar-top"></span>
@@ -84,16 +84,19 @@
           <!-- Gif stopped programmatically -->
           <div class="container-information">
             <!-- <img src="./public/image/CV.png" alt="Logo CV David Bouhaben"/> -->
-            <div class="container-information__name container-information__name--modifier">
+            <div class="container-information__bio container-information__bio--modifier">
               <h1>David Bouhaben</h1>
               <h2>Développeur web/Front-End</h2>
-              <p>Je suis à la recherche d'un contrat en alternance qui
-                me permettrait d’acquérir de nouvelles
-                compétences dans le développement web (côté Front-End, Back-end ou FullStack).
-                Vous pouvez regarder ma <a href="https://paper.li/e-1598349115">curation de contenu ici</a>. Voulez-vous savoir plus sur moi ? Vous pouvez consulter mon travail sur <a href="https://github.com/Darkheadbanger">Git</a> et vous pouvez télécharger mon <a href="/public/CV/CV_Bouhaben_David_FrontEndDevelopper.pdf" target="_blank" rel="noopener"> CV ici </a>
-              </p>
             </div>
           </div>
+          <div class="bio">
+            <p>Je suis à la recherche d'un contrat en alternance qui
+              me permettrait d’acquérir de nouvelles
+              compétences dans le développement web (côté Front-End, Back-end ou FullStack).
+              Vous pouvez regarder ma <a href="https://paper.li/e-1598349115">curation de contenu ici</a>. Voulez-vous savoir plus sur moi ? Vous pouvez consulter mon travail sur <a href="https://github.com/Darkheadbanger">Git</a> et vous pouvez télécharger mon <a href="/public/CV/CV_Bouhaben_David_FrontEndDevelopper.pdf" target="_blank" rel="noopener"> CV ici </a>
+            </p>
+          </div>
+
           </div>
         </div>
       </div>
