--- a/index.html
+++ b/index.html
@@ -90,10 +90,9 @@
             </div>
           </div>
           <div class="bio">
-            <p>Je suis à la recherche d'un contrat en alternance qui
-              me permettrait d’acquérir de nouvelles
-              compétences dans le développement web (côté Front-End, Back-end ou FullStack).
-              Vous pouvez regarder ma <a href="https://paper.li/e-1598349115">curation de contenu ici</a>. Voulez-vous savoir plus sur moi ? Vous pouvez consulter mon travail sur <a href="https://github.com/Darkheadbanger">Git</a> et vous pouvez télécharger mon <a href="/public/CV/CV_Bouhaben_David_FrontEndDevelopper.pdf" target="_blank" rel="noopener"> CV ici </a>
+            <p>Je suis à la recherche d'un contrat en alternance qui me permettrait d’acquérir de nouvelles compétences dans le développement web (côté Front-End, Back-end ou FullStack).
+              Vous pouvez regarder ma <a href="https://paper.li/e-1598349115">curation de contenu ici</a>. 
+              Voulez-vous savoir plus sur moi ? Vous pouvez consulter mon travail sur <a href="https://github.com/Darkheadbanger">Git</a> et vous pouvez télécharger mon <a href="/public/CV/CV_Bouhaben_David_FrontEndDevelopper.pdf" target="_blank" rel="noopener"> CV ici </a>
             </p>
           </div>
 
