--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
         <ul>
           <li class="li">
             <a href="/about.html" class="nav__link nav__link--active"
-              >Accueil</a
+              ><i class="fas fa-home icon"></i>Accueil</a
             >
           </li>
-          <li class="li"><a href="#profil" class="nav__link">Profil</a></li>
+          <li class="li"><a href="#profil" class="nav__link"><i class="fas fa-user icon"></i>Profil</a></li>
           <li class="li">
-            <a href="#portfolio" class="nav__link">Portfolio</a>
+            <a href="#portfolio" class="nav__link"><i class="fas fa-briefcase icon"></i>Portfolio</a>
           </li>
-          <li class="li"><a href="#CV" class="nav__link">CV</a></li>
-          <li class="li"><a href="#Contact" class="nav__link">Contact</a></li>
+          <li class="li"><a href="#CV" class="nav__link"><i class="fas fa-book-open icon"></i>CV</a></li>
+          <li class="li"><a href="#Contact" class="nav__link"><i class="fas fa-phone icon"></i>Contact</a></li>
           <li class="li">
-            <a href="#Activité" class="nav__link">Activité Récente</a>
+            <a href="#Activité" class="nav__link"><i class="fas fa-tasks icon"></i>Activité Récente</a>
           </li>
           <!-- Langue, Anglais, Francais, Indonésien -->
           <li class="li">
