tech font awesome added

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                      <h2>Développeur web/Front-End</h2>
                   </div>
                </div>
-               <nav class="iconList">
+               <nav class="reseaux-sociaux">
                   <ul>
                      <li><a href=""><i class="fab fa-github"></i></a></li>
                      <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
@@ -100,6 +100,14 @@
                      Vous pouvez regarder ma <a href="https://paper.li/e-1598349115">curation de contenu ici</a>. 
                      Voulez-vous savoir plus sur moi ? Vous pouvez consulter mon travail sur <a href="https://github.com/Darkheadbanger">Git</a> et vous pouvez télécharger mon <a href="/public/CV/CV_Bouhaben_David_FrontEndDevelopper.pdf" target="_blank" rel="noopener"> CV ici </a>
                   </p>
+
+                  <div class="tech tech--modifier">
+                    <i class="fas fa-laptop-code fa-2x"></i>
+                    <i class="fas fa-server fa-2x"></i>
+                    <i class="fas fa-mobile-alt fa-2x"></i>
+                    <i class="fas fa-brush fa-2x"></i>
+                    <i class="fas fa-language fa-2x"></i>
+                  </div>
                </div>
             </div>
          </div>
