background overlay hover on fontawesome

--- a/index.html
+++ b/index.html
@@ -102,7 +102,12 @@
                   </p>
 
                   <div class="tech tech--modifier">
-                    <i class="fas fa-laptop-code fa-2x"></i>
+                    <div class="container">
+                     <i class="fas fa-laptop-code fa-2x"></i>
+                     <div class="overlay">
+                        <span>text</span>
+                     </div>
+                    </div>
                     <i class="fas fa-server fa-2x"></i>
                     <i class="fas fa-mobile-alt fa-2x"></i>
                     <i class="fas fa-brush fa-2x"></i>
