tech organisation better

--- a/index.html
+++ b/index.html
@@ -102,16 +102,43 @@
                   </p>
 
                   <div class="tech tech--modifier">
-                    <div class="container">
-                     <i class="fas fa-laptop-code fa-2x"></i>
+
+                     <div class="container-overlay-1">
+                        <i class="fas fa-laptop-code fa-2x"></i>
+                        <div class="overlay">
+                           <span class="overlay__text overlay__text--modifier">text</span>
+                        </div>
+                    
+                    </div>
+                    
+                    <div class="container-overlay-2">
+                     <i class="fas fa-server fa-2x"></i>
                      <div class="overlay">
-                        <span>text</span>
+                        <span class="overlay__text overlay__text--modifier">text</span>
                      </div>
                     </div>
-                    <i class="fas fa-server fa-2x"></i>
-                    <i class="fas fa-mobile-alt fa-2x"></i>
-                    <i class="fas fa-brush fa-2x"></i>
-                    <i class="fas fa-language fa-2x"></i>
+
+                    <div class="container-overlay-3">
+                     <i class="fas fa-mobile-alt fa-2x"></i>
+                     <div class="overlay">
+                        <span class="overlay__text overlay__text--modifier">text</span>
+                     </div>
+                    </div>
+
+                    <div class="container-overlay-4">
+                     <i class="fas fa-brush fa-2x"></i>
+                     <div class="overlay">
+                        <span class="overlay__text overlay__text--modifier">text</span>
+                     </div>
+                    </div>
+
+                    <div class="container-overlay-5">
+                     <i class="fas fa-language fa-2x"></i>
+                     <div class="overlay">
+                        <span class="overlay__text-5 overlay__text--modifier">text</span>
+                     </div>
+                    </div>
+
                   </div>
                </div>
             </div>
