text overlay fontawesome done for tech

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                      <div class="container-overlay-1">
                         <i class="fas fa-laptop-code fa-2x"></i>
                         <div class="overlay">
-                           <span class="overlay__text overlay__text--modifier">text</span>
+                           <span class="overlay__text overlay__text--modifier">Front End</span>
                         </div>
                     
                     </div>
@@ -114,30 +114,30 @@
                     <div class="container-overlay-2">
                      <i class="fas fa-server fa-2x"></i>
                      <div class="overlay">
-                        <span class="overlay__text overlay__text--modifier">text</span>
+                        <span class="overlay__text overlay__text--modifier">Back End</span>
                      </div>
                     </div>
 
                     <div class="container-overlay-3">
                      <i class="fas fa-mobile-alt fa-2x"></i>
                      <div class="overlay">
-                        <span class="overlay__text overlay__text--modifier">text</span>
+                        <span class="overlay__text overlay__text--modifier">Web Mobile</span>
                      </div>
                     </div>
 
                     <div class="container-overlay-4">
                      <i class="fas fa-brush fa-2x"></i>
                      <div class="overlay">
-                        <span class="overlay__text overlay__text--modifier">text</span>
+                        <span class="overlay__text overlay__text--modifier">Design</span>
                      </div>
                     </div>
 
-                    <div class="container-overlay-5">
+                    <!-- <div class="container-overlay-5">
                      <i class="fas fa-language fa-2x"></i>
                      <div class="overlay">
-                        <span class="overlay__text-5 overlay__text--modifier">text</span>
+                        <span class="overlay__text overlay__text--modifier">Français, Anglais, Indonésien</span>
                      </div>
-                    </div>
+                    </div> -->
 
                   </div>
                </div>
