design fontawesome better and one errased

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <div class="container-overlay-4">
                      <i class="fas fa-brush fa-2x"></i>
                      <div class="overlay">
-                        <span class="overlay__text overlay__text--modifier">Design</span>
+                        <span class="overlay__text overlay__text--modifier">Web Design</span>
                      </div>
                     </div>
 
