--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
       <script defer src="./public/JS/font-awesome-JS/all.js"></script>
       <script defer src="./public/JS/font-awesome-JS/all.min.js"></script>
       <script defer src="./public/JS/darkmode.js"></script>
+      <script defer src="./public/JS/tooltip.js"></script>
    </body>
 </html>
 
