--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
                </div>
                <nav class="reseaux-sociaux">
                   <ul>
-                     <li><a href=""><i class="fab fa-github"></i></a></li>
-                     <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
-                     <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                     <li><a href="https://github.com/Darkheadbanger" title="Github"><i class="fab fa-github"></i></a></li>
+                     <li><a href="https://www.linkedin.com/in/david-bouhaben-904806b4/" title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
+                     <li><a href="https://twitter.com/Davidbouhaben1" title="Twitter"><i class="fab fa-twitter"></i></a></li>
                   </ul>
                </nav>
                <div class="bio">
                   <p>Je suis à la recherche d'un contrat en alternance qui me permettrait d’acquérir de nouvelles compétences dans le développement web (côté Front-End, Back-end ou FullStack).
                      Vous pouvez regarder ma <a href="https://paper.li/e-1598349115">curation de contenu ici</a>. 
-                     Voulez-vous savoir plus sur moi ? Vous pouvez consulter mon travail sur <a href="https://github.com/Darkheadbanger">Git</a> et vous pouvez télécharger mon <a href="/public/CV/CV_Bouhaben_David_FrontEndDevelopper.pdf" target="_blank" rel="noopener"> CV ici </a>
+                     Voulez-vous savoir plus sur moi ? Vous pouvez consulter mon travail sur <a href="https://github.com/Darkheadbanger">Github</a> et vous pouvez télécharger mon <a href="/public/CV/CV_Bouhaben_David_FrontEndDevelopper.pdf" target="_blank" rel="noopener"> CV ici </a>
                   </p>
 
                   <div class="tech tech--modifier">
