responsive design better with heigh auto + margin

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
                </div>
                <!-- Gif stopped programmatically -->
                <div id="homepage">
-                  <div class="container-information">
+                  <div>
+                                       <div class="container-information">
                      <!-- <img src="./public/image/CV.png" alt="Logo CV David Bouhaben"/> -->
                      <div class="container-information__info container-information__info--modifier">
                         <h1>David Bouhaben</h1>
@@ -147,6 +148,8 @@
                        </div> -->
    
                      </div>
+                  </div>
+
                   </div>
                </div>
             </div>
