--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
       <div class="container-header__background">
         <div class="container-header__info">
           <div class="container-header__nav">
+            <span id="date" class="heure heure--modifier"></span>
+
+            <span class="currentTime currentTime__element currentTime__element--modifier"></span>
+
             <div id="home" class="nav nav__logo">
               <span class="nav__logo--modifier">
                 <a href="/index.html"
@@ -296,5 +300,6 @@
     <script defer src="./public/JS/font-awesome-JS/all.min.js"></script>
     <script defer src="./public/JS/darkmode.js"></script>
     <script defer src="./public/JS/tooltip.js"></script>
+    <script defer src="./public/JS/date.js"></script>
   </body>
 </html>
