get date and not get day

--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
           <div class="container-header__nav">
             <span id="date" class="heure heure--modifier"></span>
 
-            <span class="currentTime currentTime__element currentTime__element--modifier"></span>
+            <span
+              class="currentTime currentTime__element currentTime__element--modifier"
+            ></span>
 
             <div id="home" class="nav nav__logo">
               <span class="nav__logo--modifier">
@@ -301,5 +303,6 @@
     <script defer src="./public/JS/darkmode.js"></script>
     <script defer src="./public/JS/tooltip.js"></script>
     <script defer src="./public/JS/date.js"></script>
+    <script defer src="./public/JS/weather.js"></script>
   </body>
 </html>
